# whatsapp-fashion-commerce-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
api/: index.py
app/: __init__.py  config.py  main.py
app/api/: admin.py  health.py  webhook.py
app/core/: __init__.py  database.py  exceptions.py  gemini_client.py  logging.py  openai_client.py  redis.py
app/models/: catalog.py  conversation.py  knowledge_base.py  order.py  product.py  vision.py  whatsapp.py
app/services/: ai_service.py  conversation_service.py  escalation_service.py  order_service.py  product_service.py  rag_service.py  session_service.py  vision_service.py  whatsapp_service.py
app/utils/: language.py  message_builder.py  retry.py
migrations/: 001_initial_schema.sql
specs/1-whatsapp-ai-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-whatsapp-ai-bot/checklists/: requirements.md
specs/1-whatsapp-ai-bot/contracts/: openapi.yaml
tests/: __init__.py  conftest.py
tests/contract/: test_openai_api.py  test_supabase_api.py  test_whatsapp_api.py
tests/integration/: test_admin_sync.py  test_catalog_browse.py  test_order_tracking.py  test_rag_pipeline.py  test_visual_search.py
tests/unit/test_services/: test_escalation_service.py  test_order_service.py  test_product_service_browse.py  test_rag_service.py  test_session_service.py  test_vision_service.py
