[project]
name = "whatsapp-fashion-commerce-ai"
version = "0.1.0"
description = "WhatsApp-based AI sales and support agent for clothing import business"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FashionImport Team"}
]
keywords = ["whatsapp", "chatbot", "ai", "ecommerce", "fashion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
    "google-generativeai>=0.3.0",
    "supabase>=2.3.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "sentry-sdk[fastapi]>=1.38.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.core.redis",
    "app.core.gemini_client",
    "app.services.session_service",
    "app.services.whatsapp_service",
    "app.services.vision_service",
    "app.services.product_service",
    "app.services.order_service",
    "app.services.rag_service",
    "app.services.conversation_service",
    "app.utils.retry",
]
disable_error_code = ["misc", "return-value", "arg-type", "index", "call-overload", "union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "app.core.openai_client"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "app.services.ai_service"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "app.main"
disable_error_code = ["no-untyped-def"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 100
